--- a/viz_links.html
+++ b/viz_links.html
@@ -123,9 +123,10 @@ $(document).ready(function () {
 <hr />
 <p>For a more detailed guidance on data visualization and design principles please use the material</p>
 <ul>
-<li><a href="https://unhcr.csod.com/client/unhcr/default.aspx">“ODM Module 21 - Data Visualization and Design Principles”</a> on UNHCR Learn &amp; Connect</li>
-<li><a href="http://data.unhcr.org/imtoolkit/chapters/view/info-graphics/lang:eng">General Infographics Know-How</a> in the UNHCR IM Toolkit</li>
-<li><a href="file/learning_files/viz_general/Heer-EffectiveDataVisualization.pdf">Training Material on Visualizations</a> of the UNHCR TIME Training (Training on Information Management in Emergencies)</li>
+<li><a href="http://data.unhcr.org/imtoolkit/" target="blank">UNNHCR IM Toolkit</a></li>
+<li><a href="file://analysis_toolkit/data/test.pdf" target="blank">ODM Module 21 - Data Visualization and Design Principles</a></li>
+<li><a href="http://data.unhcr.org/imtoolkit/chapters/view/info-graphics/lang:eng" target="blank">General Infographics Know-How</a></li>
+<li><a href="file/learning_files/viz_general/Heer-EffectiveDataVisualization.pdf" target="blank">Training Material on Visualizations</a></li>
 </ul>
 
 
